--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ dotenvy = "0.15"
 notify = "6.1"
 once_cell = "1.19"
 regex = "1.10"
+serde = "1.0"
+serde_json = "1.0"
 sqlx-core = {version = "0.7", features = ["_rt-tokio", "bit-vec", "ipnetwork", "json", "bigdecimal", "rust_decimal", "mac_address", "chrono", "time", "uuid"]}
 sqlx-mysql = {version = "0.7", features = ["json", "bigdecimal", "rust_decimal", "chrono", "time", "uuid"], optional = true}
 sqlx-postgres = {version = "0.7", features = ["json", "bit-vec", "bigdecimal", "ipnetwork", "rust_decimal", "mac_address", "chrono", "time", "uuid"], optional = true}
