--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,14 +3,14 @@ authors = ["Nathan Faucett <nathanfaucett@gmail.com>"]
 description = "Typescript SQLx compile-time checked queries without a DSL."
 
 categories = ["database"]
-keywords = ["database", "async", "postgres", "mysql", "sqlite"]
+keywords = ["database", "typescript", "postgres", "mysql", "sqlite"]
 
 edition = "2021"
 license = "MIT/Apache-2.0"
 name = "ts_sqlx"
 repository = "https://github.com/nathanfaucett/ts-sqlx"
 rust-version = "1.74"
-version = "0.1.1"
+version = "0.1.2"
 
 default-run = "ts-sqlx"
 
@@ -38,6 +38,7 @@ clap_complete = {version = "4.4", optional = true}
 console = "0.15"
 ctrlc = "3.4"
 dotenvy = "0.15"
+hashbrown = {version = "0", features = ["serde"]}
 notify = "6.1"
 once_cell = "1.19"
 regex = "1.10"
@@ -53,3 +54,17 @@ swc_ecma_parser = "0.142"
 tokio = {version = "1.36", features = ["full"]}
 url = {version = "2.5", default-features = false}
 walkdir = "2.4"
+
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
+[profile.release]
+lto = true
+opt-level = "z"
+strip = true
+
+[workspace]
+members = []
