--- a/node/.npmignore
+++ b/node/.npmignore
@@ -1,16 +1,18 @@
+parcel-cache/
+dist/
+.github/
+.husky/
 .nyc_output/
 .vscode/
 coverage/
 docs/
-example/
 src/
+test-data/
 node_modules/
 .editorconfig
-.eslintignore
-.eslintrc.cjs
-.prettierignore
-.prettierrc
+biome.json
 .gitignore
 npm-debug.log
+rollup.config.mjs
 tsconfig.esm.json
 tsconfig.json
