--- a/node/tsconfig.esm.json
+++ b/node/tsconfig.esm.json
@@ -1,10 +1,10 @@
 {
-	"extends": "./tsconfig.json",
-	"compilerOptions": {
-	  "module": "ESNext",
-	  "outDir": "esm",
-	  "declarationDir": null,
-	  "declaration": false
-	}
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "module": "ESNext",
+    "target": "ESNext",
+    "outDir": "esm",
+    "declarationDir": null,
+    "declaration": false
   }
-  
+}
